--- a/ui/sfx.html
+++ b/ui/sfx.html
@@ -39,6 +39,7 @@
             margin-bottom: 1rem;
             background: linear-gradient(135deg, #fbbf24, #f59e0b);
             -webkit-background-clip: text;
+            background-clip: text;
             -webkit-text-fill-color: transparent;
             text-shadow: 0 0 40px rgba(251, 191, 36, 0.3);
         }
